--- a/todo_site/tasks/templates/tasks/task_form.html
+++ b/todo_site/tasks/templates/tasks/task_form.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
-<h1>Create a New Contact </h1>
+<h1 style="font-size: 30px; color: blue;text-align:center;">Create a New Contact </h1>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
+
   <input type="submit" />
 </form>
-
+<p style="font-size: 20px; color:orange; text-align: center;">©️ Created by Joanthan Han </p>
 {% endblock content %}
+
