--- a/todo_site/templates/base.html
+++ b/todo_site/templates/base.html
@@ -11,12 +11,14 @@
   <!-- Option 1: Include in HTML -->
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <title>  Contact Management </title>
+  <title>  Contact Management   </title>
 </head>
 
 <body>
   <div class="container">
-    {% block content %}{% endblock content %}
+    {% block content %}
+    <p> Jonathan Han </p>
+    {% endblock content %}
   </div>
 </body>
 
