--- a/jonathan_han/tasks/templates/tasks/task_form.html
+++ b/jonathan_han/tasks/templates/tasks/task_form.html
@@ -7,7 +7,7 @@
   {% csrf_token %}
   {{ form.as_p }}
 
-  <input type="submit" />
+  <input type="submit" value="Submit" class="btn btn-primary" />
 </form>
 <p style="font-size: 20px; color:orange; text-align: center;">©️ Created by Joanthan Han </p>
 {% endblock content %}
