--- a/jonathan_han/tasks/templates/tasks/task_form.html
+++ b/jonathan_han/tasks/templates/tasks/task_form.html
@@ -8,6 +8,8 @@
   {{ form.as_p }}
 
   <input type="submit" value="Submit" class="btn btn-primary" />
+  <a class="btn btn-info" href="{% url 'task_list' %}" role="button">Cancel</a>
+
 </form>
 <p style="font-size: 20px; color:orange; text-align: center;">©️ Created by Joanthan Han </p>
 {% endblock content %}
