update button style & color

--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -19,11 +19,11 @@
     <tr>
       <td>
         <a class="icon-link" href="{% url 'task_detail' task.pk %}">
-          <i class="bi bi-receipt"></i> </a>
+          <i class="fas fa-pencil-alt"></i> 
         &nbsp;
 
         <a class="icon-link" href="{% url 'task_delete' task.pk %}">
-          <i class="bi bi-trash"></i>
+          <i class="fas fa-trash"></i>
         </a>
         &nbsp;
         <style>
