--- a/tasks/templates/tasks/task_detail.html
+++ b/tasks/templates/tasks/task_detail.html
@@ -13,7 +13,9 @@
 
 <br>
 <a class="btn btn-info" href="{% url 'task_list' %}" role="button">Home</a>
-<a class="btn btn-info" href="{% url 'task_update' task.pk %}" role="button">Edit</a>
-<a class="btn btn-info" href="{% url 'task_delete' task.pk %}" role="button">Delete</a>
+
+<a class="btn" href="{% url 'task_update' task.pk %}" role="button" style="background-color: #28a745; color: white;">Edit</a>
+<a class="btn" href="{% url 'task_delete' task.pk %}" role="button" style="background-color: #dc3545; color: white;">Delete</a> 
 <p style="font-size: 20px; color:orange; text-align: center;">©️ Created by Joanthan Han </p>
+<p style="font-size: 20px; color:orange; text-align: center;">CSULB MSIS 2023-2025 </p>
 {% endblock content %}
